# src/modules/capsules/capsules.routes.ts
@@ -5,6 +5,7 @@ import {
   createSlugReservation,
   deleteCapsule,
   getCapsule,
+  streamCapsuleMessageCount,
   updateCapsule,
   verifyCapsulePassword,
 } from "./capsules.controller";
@@ -14,6 +15,7 @@ const router = Router();
 router.post("/capsules/slug-reservations", createSlugReservation);
 router.post("/capsules", createCapsule);
 router.get("/capsules/:slug", getCapsule);
+router.get("/capsules/:slug/message-count/stream", streamCapsuleMessageCount);
 router.post("/capsules/:slug/verify", verifyCapsulePassword);
 router.patch("/capsules/:slug", updateCapsule);
 router.delete("/capsules/:slug", deleteCapsule);
